Version 2.02.172 - 
===============================
  Allow lvchange to change properties on a thin pool data sub LV.
  Fix lvcreate extent percentage calculation for mirrors.
  Don't reinstate still-missing devices when correcting inconsistent metadata.
  Properly handle subshell return codes in fsadm.
  Disallow cachepool creation with policy cleaner and mode writeback.

Version 2.02.171 - 3rd May 2017
===============================
  Fix memory warnings by using mempools for command definition processing.
  Fix running commands from a script file.
  Add pvcreate prompt when device size doesn't match setphysicalvolumesize.
  lvconvert - preserve region size on raid1 image count changes
  Adjust pvresize/pvcreate messages and prompt if underlying dev size differs.
  raid - sanely handle insufficient space on takeover.
  Fix configure --enable-notify-dbus status message.
  Change configure option name prefix from --enable-lockd to --enable-lvmlockd.
  lvcreate - raise mirror/raid default regionsize to 2MiB
  Add missing configurable prefix to configuration file installation directory.

Version 2.02.170 - 13th April 2017
==================================
  Introduce global/fsadm_executable to make fsadm path configurable.
  Look for limited thin pool metadata size when using 16G metadata.
  Add lvconvert pool creation rule disallowing options with poolmetadata.
  Fix lvconvert when the same LV is incorrectly reused in options.
  Fix lvconvert VG name validation in option values.
  Fix missing lvmlockd LV locks in lvchange and lvconvert.
  Fix dmeventd setup for lvchange --poll.
  Fix use of --poll and --monitor with lvchange and vgchange.
  Disallow lvconvert of hidden LV to a pool.
  Ignore --partial option when not used for activation.
  Allow --activationmode option with lvchange --refresh.
  Better message on lvconvert --regionsize
  Allow valid lvconvert --regionsize change
  Add raid10 alias raid10_near
  Handle insufficient PVs on lvconvert takeover